added trace files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .DS_Store
+accelwattch_traces/accelwattch_pascal_traces.tgz
+accelwattch_traces/accelwattch_turing_traces.tgz
+accelwattch_traces/accelwattch_volta_traces.tgz
