--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .DS_Store
-accelwattch_traces/accelwattch_pascal_traces.tgz
-accelwattch_traces/accelwattch_turing_traces.tgz
-accelwattch_traces/accelwattch_volta_traces.tgz
+accelwattch_traces/
+results/
